# soifunc

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py  soifunc.py
.github/workflows/: python-package.yml
soifunc/: __init__.py  _metadata.py  deband.py  deint.py  denoise.py  internal.py  interpolate.py  resize.py
typings/vsmlrt/: __init__.pyi
