[tool.poetry]
name = "soifunc"
version = "0.10.0"
description = "Soichiro's VapourSynth Functions Collection"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
vapoursynth = ">=68"
vsjetpack = "^0.3.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
