[tool.poetry]
name = "soifunc"
version = "0.12.0"
description = "Soichiro's VapourSynth Functions Collection"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
vapoursynth = ">=68"
vsjetpack = "^0.7.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
