[tool.poetry]
name = "soifunc"
version = "0.13.0"
description = "Soichiro's VapourSynth Functions Collection"
authors = ["Josh Holmer <jholmer.in@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
vapoursynth = ">=68"
vsjetpack = "^0.8.2"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
